// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Button Clickable should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "alignSelf": "center",
            "backgroundColor": "#1c5023",
            "borderRadius": 20,
            "flexDirection": "row",
            "height": 56,
            "justifyContent": "center",
            "minWidth": 148,
            "overflow": "hidden",
            "paddingHorizontal": 40,
            "transform": [
              {
                "scale": 1,
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          pointerEvents="none"
          style={
            {
              "backgroundColor": "rgba(0, 0, 0, 0.5)",
              "bottom": 0,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <Text
          style={
            [
              {
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0.20000000298023224,
                "lineHeight": 17.5,
                "textAlign": "center",
              },
              {
                "color": "#ffffff",
              },
              false,
              false,
              false,
            ]
          }
        >
          Press me
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Button Compact should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "alignSelf": "center",
            "backgroundColor": "rgba(0,0,0,0.2)",
            "borderRadius": 16,
            "flexDirection": "row",
            "height": 56,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 24,
            "paddingVertical": 8,
            "transform": [
              {
                "scale": 1,
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          pointerEvents="none"
          style={
            {
              "backgroundColor": "rgba(0, 0, 0, 0.5)",
              "bottom": 0,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <Text
          style={
            [
              {
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0.20000000298023224,
                "lineHeight": 17.5,
                "textAlign": "center",
              },
              false,
              false,
              false,
              {
                "color": "#ffffff",
              },
            ]
          }
        >
          Action text
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Button CompactDisabled should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "alignSelf": "center",
            "backgroundColor": "rgba(0,0,0,0.2)",
            "borderRadius": 16,
            "flexDirection": "row",
            "height": 56,
            "justifyContent": "center",
            "opacity": 0.5,
            "overflow": "hidden",
            "paddingHorizontal": 24,
            "paddingVertical": 8,
            "transform": [
              {
                "scale": 1,
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          pointerEvents="none"
          style={
            {
              "backgroundColor": "rgba(0, 0, 0, 0.5)",
              "bottom": 0,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <Text
          style={
            [
              {
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0.20000000298023224,
                "lineHeight": 17.5,
                "textAlign": "center",
              },
              false,
              false,
              false,
              {
                "color": "#ffffff",
              },
            ]
          }
        >
          Action text
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Button Primary should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "alignSelf": "center",
            "backgroundColor": "#1c5023",
            "borderRadius": 20,
            "flexDirection": "row",
            "height": 56,
            "justifyContent": "center",
            "minWidth": 148,
            "overflow": "hidden",
            "paddingHorizontal": 40,
            "transform": [
              {
                "scale": 1,
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          pointerEvents="none"
          style={
            {
              "backgroundColor": "rgba(0, 0, 0, 0.5)",
              "bottom": 0,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <Text
          style={
            [
              {
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0.20000000298023224,
                "lineHeight": 17.5,
                "textAlign": "center",
              },
              {
                "color": "#ffffff",
              },
              false,
              false,
              false,
            ]
          }
        >
          Action text
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Button PrimaryDisabled should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "alignSelf": "center",
            "backgroundColor": "#1c5023",
            "borderRadius": 20,
            "flexDirection": "row",
            "height": 56,
            "justifyContent": "center",
            "minWidth": 148,
            "opacity": 0.5,
            "overflow": "hidden",
            "paddingHorizontal": 40,
            "transform": [
              {
                "scale": 1,
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          pointerEvents="none"
          style={
            {
              "backgroundColor": "rgba(0, 0, 0, 0.5)",
              "bottom": 0,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <Text
          style={
            [
              {
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0.20000000298023224,
                "lineHeight": 17.5,
                "textAlign": "center",
              },
              {
                "color": "#ffffff",
              },
              false,
              false,
              false,
            ]
          }
        >
          Action text
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Button PrimaryOnColor should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "alignSelf": "center",
            "backgroundColor": "rgba(0,0,0,0.5)",
            "borderRadius": 20,
            "flexDirection": "row",
            "height": 56,
            "justifyContent": "center",
            "minWidth": 148,
            "overflow": "hidden",
            "paddingHorizontal": 40,
            "transform": [
              {
                "scale": 1,
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          pointerEvents="none"
          style={
            {
              "backgroundColor": "rgba(0, 0, 0, 0.5)",
              "bottom": 0,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <Text
          style={
            [
              {
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0.20000000298023224,
                "lineHeight": 17.5,
                "textAlign": "center",
              },
              {
                "color": "#ffffff",
              },
              false,
              false,
              false,
            ]
          }
        >
          Action text
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Button Secondary should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "alignSelf": "center",
            "backgroundColor": "#fffefd",
            "borderRadius": 20,
            "flexDirection": "row",
            "height": 56,
            "justifyContent": "center",
            "minWidth": 148,
            "overflow": "hidden",
            "paddingHorizontal": 40,
            "transform": [
              {
                "scale": 1,
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          pointerEvents="none"
          style={
            {
              "backgroundColor": "rgba(0, 0, 0, 0.5)",
              "bottom": 0,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <Text
          style={
            [
              {
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0.20000000298023224,
                "lineHeight": 17.5,
                "textAlign": "center",
              },
              false,
              {
                "color": "#211408",
              },
              false,
              false,
            ]
          }
        >
          Action text
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Button SecondaryDisabled should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "alignSelf": "center",
            "backgroundColor": "#fffefd",
            "borderRadius": 20,
            "flexDirection": "row",
            "height": 56,
            "justifyContent": "center",
            "minWidth": 148,
            "opacity": 0.5,
            "overflow": "hidden",
            "paddingHorizontal": 40,
            "transform": [
              {
                "scale": 1,
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          pointerEvents="none"
          style={
            {
              "backgroundColor": "rgba(0, 0, 0, 0.5)",
              "bottom": 0,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <Text
          style={
            [
              {
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0.20000000298023224,
                "lineHeight": 17.5,
                "textAlign": "center",
              },
              false,
              {
                "color": "#211408",
              },
              false,
              false,
            ]
          }
        >
          Action text
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Button SecondaryOnColor should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "alignSelf": "center",
            "backgroundColor": "rgba(255,255,255,0.5)",
            "borderRadius": 20,
            "flexDirection": "row",
            "height": 56,
            "justifyContent": "center",
            "minWidth": 148,
            "overflow": "hidden",
            "paddingHorizontal": 40,
            "transform": [
              {
                "scale": 1,
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          pointerEvents="none"
          style={
            {
              "backgroundColor": "rgba(0, 0, 0, 0.5)",
              "bottom": 0,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <Text
          style={
            [
              {
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0.20000000298023224,
                "lineHeight": 17.5,
                "textAlign": "center",
              },
              false,
              {
                "color": "#ffffff",
              },
              false,
              false,
            ]
          }
        >
          Action text
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Button Tertiary should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "alignSelf": "center",
            "backgroundColor": "transparent",
            "borderRadius": 20,
            "flexDirection": "row",
            "height": 56,
            "justifyContent": "center",
            "minWidth": 148,
            "overflow": "hidden",
            "paddingHorizontal": 40,
            "transform": [
              {
                "scale": 1,
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          pointerEvents="none"
          style={
            {
              "backgroundColor": "rgba(0, 0, 0, 0.5)",
              "bottom": 0,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <Text
          style={
            [
              {
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0.20000000298023224,
                "lineHeight": 17.5,
                "textAlign": "center",
              },
              false,
              false,
              {
                "color": "#211408",
              },
              false,
            ]
          }
        >
          Action text
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Button TertiaryDisabled should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "alignSelf": "center",
            "backgroundColor": "transparent",
            "borderRadius": 20,
            "flexDirection": "row",
            "height": 56,
            "justifyContent": "center",
            "minWidth": 148,
            "opacity": 0.5,
            "overflow": "hidden",
            "paddingHorizontal": 40,
            "transform": [
              {
                "scale": 1,
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          pointerEvents="none"
          style={
            {
              "backgroundColor": "rgba(0, 0, 0, 0.5)",
              "bottom": 0,
              "left": 0,
              "opacity": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
        <Text
          style={
            [
              {
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0.20000000298023224,
                "lineHeight": 17.5,
                "textAlign": "center",
              },
              false,
              false,
              {
                "color": "#211408",
              },
              false,
            ]
          }
        >
          Action text
        </Text>
      </View>
    </View>
  </View>
</View>
`;
